--- a/net/xfrm/Kconfig
+++ b/net/xfrm/Kconfig
@@ -134,6 +134,13 @@ config NET_KEY_MIGRATE
 
 	  If unsure, say N.
 
+config XFRM_IPTFS
+	bool "IPsec IPTFS (RFC XXXX) encapsulation support"
+	depends on XFRM
+	help
+	  Information on the IPTFS encapsulation can be found
+          in RFC XXXX <draft-ietf-ipsecme-iptfs-12>.
+
 config XFRM_ESPINTCP
 	bool
 
